@@ -1,3 +1,7 @@
+2019-10-11  Wang Kai  <kaiwkx@gmail.com>
+
+	* leetcode.el (leetcode-try): When encounter syntax error, .expected_code_answer is null. Handle this situation depend on status_code.
+
 2019-10-10  Wang Kai  <kaiwkx@gmail.com>
 
 	* leetcode.el: submissions detail API modification
